--- a/Euro 2021 Predictions.ipynb
+++ b/Euro 2021 Predictions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "raised-probability",
+   "id": "invisible-sound",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "killing-celebrity",
+   "id": "complete-child",
    "metadata": {},
    "source": [
     "# Processing Past International Results"
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "computational-violin",
+   "id": "opposed-minute",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "british-render",
+   "id": "sapphire-friendly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cosmetic-duncan",
+   "id": "amazing-equation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "diverse-cigarette",
+   "id": "therapeutic-college",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "loving-precipitation",
+   "id": "comparable-coordinate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "searching-houston",
+   "id": "orange-header",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ceramic-employee",
+   "id": "shared-rover",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "parallel-steal",
+   "id": "cubic-philippines",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "amino-darkness",
+   "id": "impaired-mainland",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "adjusted-butler",
+   "id": "great-touch",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "caroline-karen",
+   "id": "orange-aluminum",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "undefined-index",
+   "id": "continent-impossible",
    "metadata": {},
    "source": [
     "# Processing Euro2021 Fixtures"
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "legendary-poison",
+   "id": "celtic-indiana",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "sporting-defense",
+   "id": "twelve-bracket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "infectious-swiss",
+   "id": "affected-rochester",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supreme-scotland",
+   "id": "interesting-questionnaire",
    "metadata": {},
    "source": [
     "**A class for processing a dictionary representing teams remaining in the competition, adding the appropriate fifa rankings and outputting model predictions**"
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "regulation-mambo",
+   "id": "smaller-technical",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "wicked-summary",
+   "id": "alert-width",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "technical-produce",
+   "id": "three-architecture",
    "metadata": {},
    "source": [
     "# Predictions Using Fifa Ranking Feature"
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unusual-advertising",
+   "id": "vocational-polyester",
    "metadata": {},
    "source": [
     "# **Group Stages**"
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "backed-antibody",
+   "id": "tribal-namibia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "invisible-activity",
+   "id": "wired-edition",
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "toxic-screw",
+   "id": "secure-floor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "olive-yugoslavia",
+   "id": "perceived-practice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "automatic-laugh",
+   "id": "latin-liability",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "based-gnome",
+   "id": "strong-liberal",
    "metadata": {},
    "source": [
     "**Group Stage Final Standings**"
@@ -1046,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "rolled-brake",
+   "id": "unlikely-repository",
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1129,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "eight-albert",
+   "id": "defensive-nigeria",
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1212,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "concrete-private",
+   "id": "collected-stuart",
    "metadata": {},
    "outputs": [
     {
@@ -1295,7 +1295,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "sonic-separate",
+   "id": "imported-columbus",
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1378,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "little-identification",
+   "id": "distinguished-picture",
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1461,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "aging-convergence",
+   "id": "potential-recovery",
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "driving-blink",
+   "id": "rolled-multiple",
    "metadata": {},
    "source": [
     "# **Round of 16**"
@@ -1552,7 +1552,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "promotional-failing",
+   "id": "regulated-sunday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1565,7 +1565,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "nearby-berkeley",
+   "id": "intellectual-quantity",
    "metadata": {},
    "outputs": [
     {
@@ -1662,7 +1662,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "closing-phone",
+   "id": "raising-advance",
    "metadata": {},
    "outputs": [
     {
@@ -1726,7 +1726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "married-witness",
+   "id": "affected-stuart",
    "metadata": {},
    "source": [
     "# **Quarter Finals**"
@@ -1735,7 +1735,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "stylish-judgment",
+   "id": "durable-chicken",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1748,7 +1748,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "processed-venezuela",
+   "id": "consolidated-sector",
    "metadata": {},
    "outputs": [
     {
@@ -1821,7 +1821,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "broken-rendering",
+   "id": "killing-transaction",
    "metadata": {},
    "outputs": [
     {
@@ -1861,7 +1861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "retained-houston",
+   "id": "peaceful-nancy",
    "metadata": {},
    "source": [
     "# **Semi Finals**"
@@ -1870,7 +1870,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "alpha-morgan",
+   "id": "continued-sympathy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1882,7 +1882,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "characteristic-agreement",
+   "id": "accredited-samoa",
    "metadata": {},
    "outputs": [
     {
@@ -1943,7 +1943,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "photographic-waters",
+   "id": "appointed-substitute",
    "metadata": {},
    "outputs": [
     {
@@ -1971,7 +1971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alpha-uruguay",
+   "id": "recovered-unemployment",
    "metadata": {},
    "source": [
     "# **Final**"
@@ -1980,7 +1980,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "distant-observation",
+   "id": "imperial-engineer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1992,7 +1992,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "excessive-radio",
+   "id": "endangered-blame",
    "metadata": {},
    "outputs": [
     {
@@ -2047,7 +2047,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "union-workplace",
+   "id": "static-league",
    "metadata": {},
    "outputs": [
     {
@@ -2069,10 +2069,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "first-ottawa",
+   "id": "limited-longer",
    "metadata": {},
    "source": [
-    "Belgium is the predictesd winner of the Euros 2021!"
+    "Belgium is the predicted winner of the Euros 2021!"
    ]
   }
  ],
